log in z-index problem solved, media query for 1300px added

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,8 @@ h4 {
   display: flex;
   justify-content: flex-end;
   padding: 20px 40px;
+  position: relative;
+  z-index: 2;
 }
 
 .header nav .login-btn {
@@ -255,6 +257,12 @@ h4 {
 
 /* Media queries */
 
+@media (max-width: 1300px) {
+  .categories .covers {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (max-width: 760px) {
   .header .logo {
     width: 200px;
@@ -288,5 +296,18 @@ h4 {
   .sub-header > div:last-of-type {
     justify-self: center;
     align-self: center;
+  }
+
+  .text-xl {
+    line-height: 1.3;
+    font-size: 40px;
+  }
+
+  .sub-text {
+    font-size: 20px;
+  }
+
+  .categories .covers {
+    grid-template-columns: 1fr;
   }
 }
